[gd_scene load_steps=2 format=3 uid="uid://artefactreveal"]

[ext_resource type="Script" path="res://scripts/ui/ArtefactReveal.gd" id="1"]

[node name="ArtefactReveal" type="CanvasLayer"]
layer = 10
visible = false
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.45)

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -210.0
offset_right = 420.0
offset_bottom = 210.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
custom_constants/separation = 18

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
custom_constants/separation = 18

[node name="Icon" type="TextureRect" parent="Panel/VBox/Header"]
custom_minimum_size = Vector2(72, 72)
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="Panel/VBox/Header"]
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 0
vertical_alignment = 2
text = "Artefact Discovered"
label_settings = null

[node name="Desc" type="RichTextLabel" parent="Panel/VBox"]
size_flags_vertical = 3
fit_content = true
autowrap_mode = 2
scroll_active = false
text = "Something stirs beneath the soil."

[node name="SproutRow" type="HBoxContainer" parent="Panel/VBox"]
custom_constants/separation = 18
alignment = 1

[node name="SproutIcon" type="TextureRect" parent="Panel/VBox/SproutRow"]
custom_minimum_size = Vector2(64, 64)
expand_mode = 1
stretch_mode = 5

[node name="SproutName" type="Label" parent="Panel/VBox/SproutRow"]
size_flags_horizontal = 3
vertical_alignment = 1
text = "Unlocked: ???"

[node name="Footer" type="HBoxContainer" parent="Panel/VBox"]
custom_constants/separation = 12
alignment = 2

[node name="Spacer" type="Control" parent="Panel/VBox/Footer"]
size_flags_horizontal = 3

[node name="OkBtn" type="Button" parent="Panel/VBox/Footer"]
text = "Continue"
custom_minimum_size = Vector2(140, 48)

